align form element labels to the left of fields, fix some spacing consistency issues

--- a/src/war/css/main.css
+++ b/src/war/css/main.css
@@ -21,11 +21,15 @@ h1 {
 	color: #48802c;
 	font-weight: normal;
 	font-size: 1.8em;
-	margin: .8em 0 .3em 0;
+	margin: 0.8em 0 0.3em 0;
 }
 
 ul {
 	padding-left: 15px;
+}
+
+img {
+	border: 0;
 }
 
 /* GENERAL */
@@ -58,11 +62,11 @@ ul {
 	border-width: 1px;
 	border-color: #ccc;
 	border-style: solid none solid none;
-	padding: .7em 1.2em;
+	padding: 0.7em 1.2em;
 	zoom: 1;
-	-moz-box-shadow: -3px 0px 3px #ccc; /* firefox will render a horizontal scrollbar without the h-offset -3px */
- -webkit-box-shadow: 0px 0px 3px #ccc;
-		 box-shadow: 0px 0px 3px #ccc;
+	-moz-box-shadow: -3px 0 3px #ccc; /* firefox will render a horizontal scrollbar without the h-offset -3px */
+ -webkit-box-shadow: 0 0 3px #ccc;
+		 box-shadow: 0 0 3px #ccc;
 }
 
 .nav ul {
@@ -75,7 +79,7 @@ ul {
 	display: block;
 	float: left;
 	list-style-type: none;
-	padding: .4em 1.1em;
+	padding: 0.4em 1.1em;
 }
 
 .nav a {
@@ -116,15 +120,15 @@ ul {
 fieldset,
 dl {
 	border: 1px solid #CCCCCC;
-	padding: 0 1.5em 1.5em;
-	-moz-box-shadow: 0px 0px 3px #ccc;
- -webkit-box-shadow: 0px 0px 3px #ccc;
-		 box-shadow: 0px 0px 3px #ccc;
+	padding: 0.5em 1.5em 1.5em;
+	-moz-box-shadow: 0 0 3px #ccc;
+ -webkit-box-shadow: 0 0 3px #ccc;
+		 box-shadow: 0 0 3px #ccc;
 }
 
 form .fieldcontain,
 dt {
-	margin-top: .8em;
+	margin-top: 1em;
 }
 
 dt, dd {
@@ -138,20 +142,33 @@ dt {
 
 label {
 	cursor: pointer;
-	display: block;
+	display: inline-block;
 	font-size: 1.3em;
-	margin-bottom: .2em;
+	margin-right: 0.5em;
+	text-align: right;
+	vertical-align: baseline;
+	width: 6em;
+}
+
+label + select {
+	vertical-align: top;
+}
+
+.ie6 label,
+.ie7 label {
+	display: inline;
+	zoom: 1;
 }
 
 input, select, textarea {
 	background-color: #fcfcfc;
 	border: 1px solid #ccc;
 	font-size: 1.2em;
-	padding: .2em .4em;
+	padding: 0.2em 0.4em;
 }
 
 select {
-	padding: .2em .2em .2em 0;
+	padding: 0.2em 0.2em 0.2em 0;
 }
 
 textarea {
@@ -164,9 +181,9 @@ textarea {
 input:focus, select:focus, textarea:focus {
 	border: 1px solid #b2d1ff;
 	outline: 0;
-	-moz-box-shadow: 0px 0px 3px #b2d1ff;
- -webkit-box-shadow: 0px 0px 3px #b2d1ff;
-		 box-shadow: 0px 0px 3px #b2d1ff;
+	-moz-box-shadow: 0 0 3px #b2d1ff;
+ -webkit-box-shadow: 0 0 3px #b2d1ff;
+		 box-shadow: 0 0 3px #b2d1ff;
 }
 
 .required-indicator {
@@ -174,7 +191,7 @@ input:focus, select:focus, textarea:focus {
 	display: inline-block;
 	font-size: 1.3em;
 	font-weight: bold;
-	margin-left: .3em;
+	margin-left: 0.3em;
 	vertical-align: middle;
 }
 
@@ -184,27 +201,27 @@ input:focus, select:focus, textarea:focus {
 .message {
 	font-size: 1.2em;
 	line-height: 1.6em;
-	margin: 1em 0 .5em 0;
-	padding: .5em;
+	margin: 1em 0 1em 0;
+	padding: 0.5em;
 }
 
 .message {
-	background: #f3f8fc url(../images/skin/information.png) 5px 50% no-repeat;
+	background: #f3f8fc url(../images/skin/information.png) 0.5em 50% no-repeat;
 	border: 1px solid #b2d1ff;
 	color: #006dba;
-	text-indent: 19px;
-	-moz-box-shadow: 0px 0px 3px #b2d1ff;
- -webkit-box-shadow: 0px 0px 3px #b2d1ff;
-		 box-shadow: 0px 0px 3px #b2d1ff;
+	text-indent: 21px;
+	-moz-box-shadow: 0 0 3px #b2d1ff;
+ -webkit-box-shadow: 0 0 3px #b2d1ff;
+		 box-shadow: 0 0 3px #b2d1ff;
 }
 
 .errors {
 	background: #fff3f3;
 	border: 1px solid #faa;
 	color: #c00;
-	-moz-box-shadow: 0px 0px 3px #faa;
- -webkit-box-shadow: 0px 0px 3px #faa;
-		 box-shadow: 0px 0px 3px #faa;
+	-moz-box-shadow: 0 0 3px #faa;
+ -webkit-box-shadow: 0 0 3px #faa;
+		 box-shadow: 0 0 3px #faa;
 }
 
 .errors ul {
@@ -213,8 +230,9 @@ input:focus, select:focus, textarea:focus {
 }
 
 .errors li {
-	background: url(../images/skin/exclamation.png) .5em 50% no-repeat;
-	padding-left: 30px;
+	background: url(../images/skin/exclamation.png) 0 50% no-repeat;
+	padding-left: 16px;
+	text-indent: 0.5em;
 }
 
 select:invalid,
@@ -233,9 +251,9 @@ textarea:invalid:focus,
 .error select:focus,
 .error input:focus,
 .error textarea:focus {
-	   -moz-box-shadow: 0px 0px 3px red;
-	-webkit-box-shadow: 0px 0px 3px red;
-            box-shadow: 0px 0px 3px red;
+	   -moz-box-shadow: 0 0 3px red;
+	-webkit-box-shadow: 0 0 3px red;
+            box-shadow: 0 0 3px red;
 }
 
 /* TABLES */
@@ -244,9 +262,9 @@ table {
 	border: 1px solid #ccc;
 	border-collapse: collapse;
 	width: 100%;
-	-moz-box-shadow: 0px 0px 3px #ccc;
- -webkit-box-shadow: 0px 0px 3px #ccc;
-		 box-shadow: 0px 0px 3px #ccc;
+	-moz-box-shadow: 0 0 3px #ccc;
+ -webkit-box-shadow: 0 0 3px #ccc;
+		 box-shadow: 0 0 3px #ccc;
 }
 
 tr {
@@ -257,7 +275,7 @@ td, th {
 	border-left: 1px solid #ddd;
 	font-size: 1.3em;
 	line-height: 1.3em;
-	padding: .5em .6em;
+	padding: 0.5em 0.6em;
 	text-align: left;
 	vertical-align: top;
 }
@@ -271,7 +289,7 @@ th {
 	color: #666;
 	font-weight: bold;
 	line-height: 1.7em;
-	padding: .2em .6em;
+	padding: 0.2em 0.6em;
 }
 
 th a {
@@ -323,19 +341,19 @@ th:hover, tr:hover {
 		  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff', EndColorStr='#eaeaea')";
 	border: 1px solid #ccc;
 	border-top: 0;
-	padding: 1em .3em;
+	padding: 1em 0.3em;
 	text-align: center;
-	-moz-box-shadow: 0px 0px 3px #ccc;
- -webkit-box-shadow: 0px 0px 3px #ccc;
-		 box-shadow: 0px 0px 3px #ccc;
+	-moz-box-shadow: 0 0 3px #ccc;
+ -webkit-box-shadow: 0 0 3px #ccc;
+		 box-shadow: 0 0 3px #ccc;
 }
 
 .pagination a,
 .pagination .currentStep {
 	color: #666;
 	font-size: 1.1em;
-	margin: 0 .3em;
-	padding: .2em;
+	margin: 0 0.3em;
+	padding: 0.2em;
 	text-decoration: none;
 }
 
@@ -369,9 +387,9 @@ th:hover, tr:hover {
 	display: inline-block;
 	font-size: 1.3em;
 	font-weight: bold;
-	margin: .2em 0 .2em .3em;
+	margin: 0.2em 0 0.2em 0.3em;
 	overflow: visible;
-	padding: .2em .6em;
+	padding: 0.2em 0.6em;
 }
 
 .buttons input:hover, .buttons input:focus {
